chore: further work + documentation
Adds further work to implement the AlgeMapLoom. As this was done through
rapid prototyping, tests were not maintained and need to be checked